# chowkidar

./: .gitignore  .pre-commit-hooks.yaml  COMMANDS.md  README.md  project.md  pyproject.toml
.codemeter/: ai_interactions.jsonl  ai_summary.json  projects.jsonl  sessions.jsonl
.cursor/rules/: systems-thinking.mdc
examples/: github-action.yml  gitlab-ci.yml
extension/: chowkidar-0.1.0.vsix  chowkidar-0.2.0.vsix  chowkidar-0.2.1.vsix  chowkidar-0.3.0.vsix  chowkidar-0.7.0.vsix  chowkidar-0.7.3.vsix  package-lock.json  package.json
extension/src/: chowkidarBridge.ts  codeActions.ts  commands.ts  diagnostics.ts  extension.ts  sidebarProvider.ts  statusBar.ts
src/chowkidar/: __init__.py  advisor.py  capabilities.py  cli.py  cloud_adapters.py  config.py  dashboard.py  deployment.py  editor.py  gate.py  git_ops.py  migration_tester.py  predictor.py  pricing.py  recommendations.py  report.py  report_server.py  shell_hook.py
src/chowkidar/ide/: __init__.py  detector.py  rules_writer.py
src/chowkidar/mcp_server/: __init__.py  server.py
src/chowkidar/providers/: __init__.py  anthropic_provider.py  (+4 more)
tests/: test_advisor.py  test_capabilities.py  test_config.py  test_dashboard.py  test_deployment.py  test_discovery.py  test_doctor.py  test_framework_detector.py  test_gate.py  test_git_ops.py  test_ide_rules.py  test_migration_tester.py  test_muting.py  test_notifier.py  test_predictor.py  test_pricing.py  test_providers.py  test_registry.py  test_report.py  test_scanner.py  test_shell_hook.py  test_slm.py  test_updater.py  test_webhook.py
tests/fixtures/: .gitignore  sample.env  sample_config.json  sample_config.yaml
(+27 files in other folders)
